correccion en pantalla de catedraticos
